# signal-processing-algorithms

./: .gitignore  .isort.cfg  Dockerfile  LICENSE  README.md  build.py  evergreen.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ipynb
.github/: CODEOWNERS
.github/actions/deploy/: action.yml
.github/workflows/: cicd.yml  publishpackage.yml  testpackage.yml
docs/: Dockerfile  docker-compose.yml
docs/profiling/: algorithm_implementations.ipynb  numpy_calculator.py  numpy_windowed_calculator.py  optimized_calculator.py  original_calculator.py  windowed_calculator.py
scripts/: create_virtualenv  deploy.sh  pre-push
src/signal_processing_algorithms/: __init__.py  config.py  determinism.py  difference.py  distance.py  e_divisive.c  e_divisive.py  e_divisive_native_wrapper.py  e_divisive_numpy.py  energy_statistics.py  gesd.py  homogeneity.py  utils.py
src/signal_processing_algorithms/e_divisive/: __init__.py  base.py  change_points.py  default.py  e_divisive.py  numpy_calculator.py  significance_test.py
src/signal_processing_algorithms/e_divisive/calculators/: __init__.py  cext_calculator.py  e_divisive.c  numpy_calculator.py
src/signal_processing_algorithms/energy_statistics/: cext_calculator.py  e_divisive.c  energy_statistics.py  permutation_test.py
tests/: __init__.py  conftest.py  e_divisive_series.py  gesd_series.py  test_algorithm_continuity.py  test_calculator.py  test_calculator_equivalence.py  test_deployment.py  test_detection.py  test_difference.py  test_distance.py  test_e_divisive.py  test_e_divisive_series.py  test_energy_statistics.py  test_gesd.py  test_homogeneity.py  test_perf_1635.py  test_permutation_test.py
tests/data/: expected_result_robust_series.json  expected_result_robust_series_proper_division.json  long_series.json  real_series.json  robust_series.json
tests/data/profiling/: huge.json  humungous.json  large.json  medium.json  short.json  small.json  very_large.json
