[tool.poetry]
name = "signal-processing-algorithms"
version = "2.1.6"
description = "Signal Processing Algorithms from MongoDB"
authors = [
    "Alexander Costas <alexander.costas@mongodb.com>",
    "David Bradford <david.bradford@mongodb.com>",
    "David Daly <david.daly@mongodb.com",
    "Henrik Ingo <henrik.ingo@mongodb.com>",
    "Jeff Zambory <jeff.zambory@mongodb.com>",
    "Jim O'Leary <jim.oleary@mongodb.com>",
    "Lydia Stepanek <lydia.stepanek@mongodb.com>"
]
license="Apache-2.0"
repository="https://github.com/mongodb/signal-processing-algorithms"
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "~3.11"
more-itertools = "^8.2.0"
setuptools = ">=65.5.1,<71.0.0"
scipy = "^1.8.1"
structlog = "^24.2"
typing-extensions = "^4.5.0"
pyyaml="^6.0.0"
gevent="^24.10.1"
numpy = "^1.24.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
pytest-black = "^0.3"
pytest-cov = "^2.8"
pytest-flake8 = "^1.3.0"
pytest-isort = "^3.1"
pytest-mypy = "^0.8"
pytest-pydocstyle = "^2.0.0"
hypothesis = "^5.19"
python-service-tools = "^0.4.4"
black = "^20.8b1"

[tool.black]
line-length = 100
